[gd_scene load_steps=6 format=3 uid="uid://bt_enemy_scene_uid"]

[ext_resource type="Script" path="res://scripts/characters/bt_enemy.gd" id="1_script"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="2_beehave"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector.gd" id="3_selector"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence.gd" id="4_sequence"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 32.0

[node name="BTEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_script")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="MountLeft" type="Node2D" parent="."]
position = Vector2(-10, -15)
rotation = -1.0472

[node name="MountRight" type="Node2D" parent="."]
position = Vector2(-10, 15)
rotation = 1.0472

[node name="MountFront" type="Node2D" parent="."]
position = Vector2(20, 0)

[node name="BeehaveTree" type="Node" parent="."]
script = ExtResource("2_beehave")

[node name="RootSelector" type="Node" parent="BeehaveTree"]
script = ExtResource("3_selector")
